--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -6,6 +6,11 @@
         <title>{% block title %}HealthGo{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'styles.css' %}" rel="stylesheet">
+        <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB__YytlOBMrl5L2s_WRF6-5iOQkvY5kXM&callback=initMap&v=weekly"
+      defer
+    ></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="{% static 'common.js' %}"></script>
     </head>
