--- a/HealthGo/static/styles.css
+++ b/HealthGo/static/styles.css
@@ -7,3 +7,12 @@
     width: 100%;
   }
   
+  /* 
+   * Optional: Makes the sample page fill the window. 
+   */
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
