--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -21,21 +21,12 @@
           
             <div>
               <ul class="navbar-nav mr-auto">
-                {% if request.user.is_authenticated %}
-		          <li class="nav-item">
-		            <a class="nav-link" href="{% url 'profile' request.user.username%}"
-		              ><strong>{{ request.user.userid }}</strong></a
-		            >
-		          </li>
-                {% endif %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">Find </a>
-                </li>
+                {% if loginuser %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'rewards' %}">Rewards</a>
                   </li>
-                {% if user.is_authenticated %}
                 
+                <a class="nav-link" href="{% url 'logout' %}">Log out</a>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Log In</a>
