--- a/HealthGo/templates/login.html
+++ b/HealthGo/templates/login.html
@@ -11,7 +11,9 @@
     <form class="col-lg-6 offset-lg-3 " action="/login" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="userid" placeholder="userid" type="text">
+
+			user information
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="username" type="text">
         </div>
         <div class="form-group">
             <input class="form-control" name="password" placeholder="Password" type="password">
