--- a/HealthGo/static/styles.css
+++ b/HealthGo/static/styles.css
@@ -3,8 +3,19 @@
  * that contains the map. 
  */
  #map {
-    height: 500px;
-    width: 100%;
+  height: 500px;
+  width: 100%;
+  }
+  
+  #floatingWp {
+    position:absolute;
+    top: 120px; 
+    left: 230px; 
+    width:50%;
+    height:100px;
+    border:1px solid #000;
+
+
   }
   
   /* 
