--- a/HealthGo/templates/index.html
+++ b/HealthGo/templates/index.html
@@ -2,8 +2,15 @@
 
 {% block body %}  
 
-   
+   {% for User in Users%}
+   <div id="title" class="side front">{{User.UID}}</div> 
+   <div id="define" class="side back">{{User.UserID}}</div>
+   <div id="define" class="side back">{{User.Username}}</div>
+   <div id="define" class="side back">{{User.Password}}</div>
+   <div id="define" class="side back">{{User.Points}}</div>
+   {% endfor %}
 
+   
 <div class="row">
 <div id="map"></div>
   <div class="col-sm-6">Maps are here</div>
@@ -12,43 +19,4 @@
   <div class="col-sm-4"></div>
 	
 </div>
-{% endblock %}
-
-
-
-{% block javascript %}
-<script>
-
-function savewp(id) {
-  var post_data = {
-			wp_id : id
-	    };
-	
-	$.ajax({
-		type: "POST",
-		url: "/savewp",
-		dataType: "json",
-		success: function (msg) {
-			if (msg) {
-				if (msg.saved == true){ 
-					//alert msg  for saved data
-					
-				} else {
-					// fail
-				}	
-        //	
-				$("#spn-wp-" + id).text(msg.count);
-			}
-		},
-		data: JSON.stringify(post_data)
-	});
-	
-}
-
-
-
-
-
-
-</script>
 {% endblock %}
