--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -7,10 +7,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'styles.css' %}" rel="stylesheet">
         <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB__YytlOBMrl5L2s_WRF6-5iOQkvY5kXM&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly"
       defer
     ></script>
-    <script type="text/javascript" src="{% static 'geo.json' %}"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="{% static 'common.js' %}"></script>
@@ -22,12 +21,21 @@
           
             <div>
               <ul class="navbar-nav mr-auto">
-                {% if loginuser %}
+                {% if request.user.is_authenticated %}
+		          <li class="nav-item">
+		            <a class="nav-link" href="{% url 'profile' request.user.username%}"
+		              ><strong>{{ request.user.userid }}</strong></a
+		            >
+		          </li>
+                {% endif %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'index' %}">Find </a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'rewards' %}">Rewards</a>
                   </li>
+                {% if user.is_authenticated %}
                 
-                <a class="nav-link" href="{% url 'logout' %}">Log out</a>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Log In</a>
