--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -21,20 +21,14 @@
           
             <div>
               <ul class="navbar-nav mr-auto">
-                {% if request.user.is_authenticated %}
-		          <li class="nav-item">
-		            <a class="nav-link" href="{% url 'profile' request.user.username%}"
-		              ><strong>{{ request.user.userid }}</strong></a
-		            >
-		          </li>
-                {% endif %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">Find </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'rewards' %}">Rewards</a>
+                
+                {% if loginuser %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'rewards' %}">Rewards</a>
                   </li>
-                {% if user.is_authenticated %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                </li>
                 
                 {% else %}
                     <li class="nav-item">
