--- a/HealthGo/templates/index.html
+++ b/HealthGo/templates/index.html
@@ -20,3 +20,32 @@
 	
 </div>
 {% endblock %}
+
+{% block javascript %}
+<script>
+
+function savewp(id) {
+  var post_data = {
+			wp_id : id
+	    };
+	
+	$.ajax({
+		type: "POST",
+		url: "/savewp",
+		dataType: "json",
+		success: function (msg) {
+			if (msg) {
+				if (msg.saved == true){ 
+					//alert msg  for saved data
+					
+				} else {
+					// fail
+				}	
+        //	
+				$("#spn-wp-" + id).text(msg.count);
+			}
+		},
+		data: JSON.stringify(post_data)
+	});
+	
+}
