--- a/HealthGo/templates/index.html
+++ b/HealthGo/templates/index.html
@@ -25,8 +25,15 @@
 <script>
 
 function savewp(id) {
+  var answer = $("#answer_" + id).val()
+  var user_answer = $("#txt_" + id).val();
+  var is_correct = false;
+  if(user_answer == answer){
+    is_correct = true;
+  }
   var post_data = {
-			wp_id : id
+			wpid : id,
+      success : is_correct,
 	    };
 	
 	$.ajax({
@@ -34,21 +41,20 @@ function savewp(id) {
 		url: "/savewp",
 		dataType: "json",
 		success: function (msg) {
+      console.log(msg)
 			if (msg) {
-				if (msg.saved == true){ 
-					//alert msg  for saved data
-					
+				if (msg.status == 200){ 
+				$("#content_" + id).find("#firstHeading").text(msg.text)
 				} else {
-					// fail
+					console.log("failfailfailfailfail")
 				}	
         //	
-				$("#spn-wp-" + id).text(msg.count);
+				//$("#content_" + id).hide();
 			}
 		},
 		data: JSON.stringify(post_data)
 	});
 	
-}
-
+}</script>
 
 {% endblock %}
