--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -16,9 +16,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="{% static 'common.js' %}"></script>
     </head>
-    <body>
+    <body style = "background-color: #5e68b0;">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav style = "background-color: #b1cdff;" class="navbar navbar-expand-lg navbar-light">
         
             <a class="navbar-brand" href="{% url 'index' %}">HealthGo</a>
           
