--- a/HealthGo/templates/index.html
+++ b/HealthGo/templates/index.html
@@ -4,7 +4,7 @@
 
    
 <div class="row">
-<div id="map"></div>
+<div style = "margin: 50px;border-radius: 25px;"id="map"></div>
 </div>
 {% endblock %}
 
