--- a/HealthGo/templates/rewards.html
+++ b/HealthGo/templates/rewards.html
@@ -4,16 +4,17 @@
 
 {% block body %}
 
-<div class="card text-center" style="width: 18rem;">
+<div class="card text-center" style="width: 50%;float: left;height:500px">
 	<div class="card-body">
 	<img src="{% static 'rewards.png' %}" style="background-size:150px;width:50px; height:50px">
 	<h5 class="card-title">{{loginuser.username}} Rewards</h5>
-	<h6 class="card-subtitle mb-2 text-muted">{{loginuser.points}}</h6>
+	<h1 class="card-subtitle mb-2 text-muted">{{loginuser.points}}</h1>
 	</div>
   </div>
 
-
-<table class="table table-striped table-sm" style="width: 300;height: 400;background: ">
+<div style = "width: 50%; float:right;">
+<h1>Leaderboard</h1>
+<table class="table table-striped table-sm" style="width: 300;height: 400;">
 	<thead>
 	  <tr>
 		<th scope="col">#</th>
@@ -31,7 +32,7 @@
 		  {% endfor %}
 	  </tbody>
 </table>
-
+</div>
 
 
 {% endblock %}
