--- a/HealthGo/templates/index.html
+++ b/HealthGo/templates/index.html
@@ -4,7 +4,7 @@
 
    
 <div class="row">
-<div id="map"></div>
+<div style = "border-radius: 25px;margin: 50px" id="map"></div>
 </div>
 {% endblock %}
 
