--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -20,22 +20,22 @@
 
         <nav style = "background-color:  #5e68b0;" class="navbar navbar-expand-lg navbar-light">
         
-            <a style = "color: rgb(254, 249, 104)"class="navbar-brand" href="{% url 'index' %}">HealthGo</a>
+            <a style = "color:#fef7bb"class="navbar-brand" href="{% url 'index' %}">HealthGo</a>
           
             <div>
               <ul class="navbar-nav mr-auto">
                 
                 {% if loginuser %}
                 <li class="nav-item">
-                    <a style = "color: rgb(254, 249, 104)" class="nav-link" href="{% url 'rewards' %}">Rewards</a>
+                    <a style = "color: #fef7bb" class="nav-link" href="{% url 'rewards' %}">Rewards</a>
                   </li>
                   <li class="nav-item">
-                <a  style = "color: rgb(254, 249, 104)" class="nav-link" href="{% url 'logout' %}">Log out</a>
+                <a  style = "color:#fef7bb" class="nav-link" href="{% url 'logout' %}">Log out</a>
                 </li>
                 
                 {% else %}
                     <li class="nav-item">
-                        <a style = "color: rgb(254, 249, 104)" class="nav-link" href="{% url 'login' %}">Log In</a>
+                        <a style = "color:#fef7bb" class="nav-link" href="{% url 'login' %}">Log In</a>
                     </li>
                     
                 {% endif %}
