--- a/HealthGo/templates/rewards.html
+++ b/HealthGo/templates/rewards.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<div class="card text-center" style="width: 50%;float: left;height:1000px; background-color:rgb(254, 249, 104)">
+<div class="card text-center" style="width: 50%;float: left;height:800px; background-color:#fef7bb;">
 	<div class="card-body">
 	<img src="{% static 'rewards.png' %}" style="background-size:150px;width:50px; height:50px">
 	<h5 class="card-title">{{loginuser.username}} Rewards</h5>
