--- a/HealthGo/templates/layout.html
+++ b/HealthGo/templates/layout.html
@@ -19,7 +19,7 @@
     <body style = "background-color:#b1cdff;">
 
         <nav style = "background-color:  #5e68b0;" class="navbar navbar-expand-lg navbar-light">
-        
+           <img src="{% static 'logo.png' %}" style="background-size:150px;width:112.5px; height:75px">
             <a style = "color:#fef7bb"class="navbar-brand" href="{% url 'index' %}">HealthGo</a>
           
             <div>
