changing UI again

--- a/HealthGo/templates/rewards.html
+++ b/HealthGo/templates/rewards.html
@@ -5,9 +5,9 @@
 
 <div class="card text-center" style="width: 50%;float: left;height:800px; background-color:#fef7bb;">
 	<div class="card-body">
-	<img src="{% static 'rewards.png' %}" style="background-size:150px;width:50px; height:50px">
-	<h5 class="card-title">{{loginuser.username}} Rewards</h5>
-	<h1 class="card-subtitle mb-2 text-muted">{{loginuser.points}}</h1>
+	<img src="{% static 'rewards.png' %}" style="background-size:300px;width:100px; height:100px">
+	<h5 style = "font-size: 50px;" class="card-title">{{loginuser.username}} Rewards</h5>
+	<h1 style = "font-size: 300px;"class="card-subtitle mb-2 text-muted">{{loginuser.points}}</h1>
 	</div>
   </div>
 
